--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box !important;
 } */
 body{
-    overflow-x: hidden !important;
+    /* overflow-x: hidden !important; */
 }
 @font-face {
     font-family: dancing;
@@ -21,4 +21,10 @@ h1{
     min-width: 50% !important;
     max-height: 200px !important;
 
+}
+@media  only screen and (max-width:710px) {
+    body{
+        width: 100%  !important;
+    }
+    
 }
